@@ -69,6 +69,10 @@ class dbobjTestCase(unittest.TestCase):
         self.db.close()
         self.env.close()
 
+    def test03_dbobj_type_before_open(self):
+	# Ensure this doesn't cause a segfault.
+	self.assertRaises(db.DBInvalidArgError, db.DB().type)
+
 #----------------------------------------------------------------------
 
 def test_suite():
